# azathoth-core

./: Cargo.toml  README.md
src/: crc_table.rs  errors.rs  lib.rs
src/os/: mod.rs
src/os/linux/: consts.rs  fn_defs.rs  mod.rs  structs.rs  syscalls.rs  types.rs
src/os/windows/: consts.rs  fn_defs.rs  mod.rs  structs.rs  types.rs
src/os/windows/av/: fn_defs.rs  mod.rs  structs.rs
src/os/windows/dotnet/: consts.rs  fn_defs.rs  mod.rs  structs.rs
