[package]
name = "azathoth-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Core OS types for the AzathothC2 project"
readme = "README.md"
repository = "https://github.com/AzathothC2/azathoth-core"

[dependencies]
serde = {version = "1.0.219", optional = true}

[features]
std = ["dep:serde"]