[package]
name = "azathoth-core"
version = "0.1.6"
edition = "2024"
license = "MIT"
description = "Core OS types for the AzathothC2 project"
readme = "README.md"
repository = "https://github.com/AzathothC2/azathoth-core"

[dependencies]
serde = {version = "1.0.228", optional = true}

[features]
default = ["windows", "linux"]
std = ["dep:serde", "windows", "linux", "dotnet-defs"]
dotnet-defs = []
av-defs = []
windows = []
linux = []
